--- a/maf/maf_buscar.html
+++ b/maf/maf_buscar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
     <title>Buscar Cotización</title>
 </head>
 
@@ -21,7 +22,10 @@
                         <input type="number" name="documentoCliente" id="documentoCliente" required />
                     </div>
 
-                    <button type="submit" class="px-10 bg-gray-500 text-white py-1 rounded">Buscar</button>
+                    <button type="submit" class="px-10 bg-gray-500 text-white py-1 rounded space-x-1">
+                        <span class="mdi mdi-magnify"></span>
+                        <span>Buscar</span>
+                    </button>
 
                     <div>
                         <label for="cliente">Cliente:</label>
